<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="overload.drmed.EditarPacActivity"
    tools:showIn="@layout/app_bar_editarpac">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:windowSoftInputMode="adjustResize"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="true">

                <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_nome"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt2" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nomesocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="true">

                <EditText
                    android:id="@+id/edt2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_nome_social"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt4" />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/telefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <EditText

                    android:id="@+id/edt4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_telefone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt5" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/nascimento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <EditText
                    android:id="@+id/edt5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_dtnasc"
                    android:inputType="date"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt6" />

            </android.support.design.widget.TextInputLayout>

            <ToggleButton
                android:id="@+id/sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textOff="Masculino"
                android:textOn="Feminino" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/cpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <EditText
                    android:id="@+id/edt6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_cpf"
                    android:inputType="number"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt8" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <EditText
                    android:id="@+id/edt8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_rg"
                    android:inputType="number"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt9" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/orgao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <EditText
                    android:id="@+id/edt9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_orgao"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <EditText
                    android:id="@+id/edt10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_cep"
                    android:inputType="number"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt11" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/endereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <EditText
                    android:id="@+id/edt11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_endereco"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt12" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <EditText
                    android:id="@+id/edt12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_numero"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt13" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/complemento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <EditText
                    android:id="@+id/edt13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_complemento"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt14" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/bairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <EditText
                    android:id="@+id/edt14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_bairro"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt15" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/cidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <EditText
                    android:id="@+id/edt15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_cidade"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt16" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <EditText
                    android:id="@+id/edt16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_estado"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt17" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mae"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true">

                <EditText
                    android:id="@+id/edt17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_mae"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt18" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/pai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:focusable="true">

                <EditText
                    android:id="@+id/edt18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_pai"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/edt3" />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                >

                <EditText
                    android:id="@+id/edt3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cad_email"
                    android:inputType="none"
                    android:maxLines="1"
                    android:nextFocusForward="@+id/btnCadastrar"
                    />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Confirmar!" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
